2005-05-15  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h: Bump version to 4.99.0 alpha.

	* include/ns.h:
	* nscp/nscp.c:
	* nsd/adpeval.c:
	* nsd/conn.c:
	* nsd/driver.c:
	* nsd/info.c:
	* nsd/init.tcl:
	* nsd/sock.c:
	* nsd/tclinit.c:
	* nsd/tcljob.c:
	* nsd/tclmisc.c:
	* nsd/tclset.c:
	* nsd/urlopen.c:
	* nsthread/nsthreadtest.c: Silence some compiler warnings.

	* nsd/tcljob.c:
	* nsd/tclobjv.c:
	* nsd/tclxkeylist.c:
	* nsd/unix.c: Hide global symbols which shouldn't be exported.

	* Makefile: Add new "checkexports" target which prints out a list
	of global symbols which shouldn't be.

2005-05-14  Stephen Deasey  <sdeasey@users.sf.net>

	* tcl/nsdb.tcl:
	* nsdb/util.tcl:
	* nsdb/Makefile: Move nsdb module's Tcl file into module directory
	and add to module shared Tcl install target.

	* nsperm/Makefile: Use new TCL variable to install shared Tcl
	files.

	* include/Makefile.module.in: Add new MODNAME and TCL Makefile
	variables which modules can use to specify a list of shared tcl
	files to install.

2005-05-13  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/init.tcl (_ns_sourcemodule): Module's shared tcl directory
	was incorrectly set to private directory.

2005-05-11  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/urlencode.c: added URLDECODE_RELAXED (undefined per default)
	to be able to adjust url decoding to replace '+' to ' ', thus being
	more forgiving to urls encoded with (broken) AOLserver urlencoder.

2005-05-04  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/unix.c: modified poll() wrapper to work on Darwin 6.x 
	in addition to 7.x and 8.x versions. Also, heavily reformatted
	poll() wrapper to be easily readable.

	* nsd/tclmisc.c: conditionally define u_int32_t and u_int8_t
	on Darwin since it has the definition already. 

2005-04-30  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/nsmain.c: Don't assign chroot directory as default server
	name.  Simplify option parsing error messages.
